tests/ui/const-generics/issues/issue-72352.full.stderr
error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-72352.rs:8:42
   |
LL | unsafe fn unsafely_do_the_thing<const F: fn(&CStr) -> usize>(ptr: *const c_char) -> usize {
   |                                          ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0741`.
